samples/_failures_safe/1761393814_01ef1f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_195d6027.c: In function ‘main’:
./samples/SAFE/__tmp_195d6027.c:163:27: error: missing terminating " character
  163 |     int n1 = add_node(&g, "
      |                           ^
./samples/SAFE/__tmp_195d6027.c:163:5: error: expected expression at end of input
  163 |     int n1 = add_node(&g, "
      |     ^~~
./samples/SAFE/__tmp_195d6027.c:163:5: error: expected declaration or statement at end of input
